# robot_mujoco

./: .clang-format  .gitignore  .gitmodules  README.md  pyproject.toml
example/franka_fr3_mujoco/: CMakeLists.txt  README.md  package.xml
example/franka_fr3_mujoco/config/: controllers.yaml  fr3.urdf.template
example/franka_fr3_mujoco/launch/: fr3_sim.launch.py
mujoco_hardware/: CMakeLists.txt  mujoco_hardware_plugin.xml  package.xml
mujoco_hardware/include/mujoco_hardware/: data.hpp  mujoco_hardware_interface.hpp  sensor_bridge.hpp
mujoco_hardware/src/: config.cpp  mujoco_hardware_interface.cpp  plugin_entry.cpp  sensor_bridge.cpp
mujoco_hardware/tests/: test_mujoco_hardware_interface.cpp
mujoco_hardware/tests/performance/: perf_read_write_loop.cpp
mujoco_simulation/: CMakeLists.txt  README.md  __init__.py  package.xml
mujoco_simulation/docs/: hardware_devices_principles.md  mujoco_simulation_refactoring.md  refactor_roadmap.md  simulation_api_migration.md
mujoco_simulation/include/mujoco_simulation/: mujoco_simulation.hpp  reset_options.hpp  result.hpp  simulation.hpp  simulation_config.hpp  simulation_status.hpp  status.hpp
mujoco_simulation/include/mujoco_simulation/buffer/: camera_buffer.hpp  command_buffer.hpp  command_snapshot.hpp  simulation_state_snapshot.hpp  state_buffer.hpp
mujoco_simulation/include/mujoco_simulation/component/: component_config.hpp  component_manager.hpp  component_registry.hpp  sensor_common_config.hpp  sensor_component.hpp  simulation_component.hpp
mujoco_simulation/include/mujoco_simulation/component/camera/: camera_binding.hpp  camera_component.hpp  camera_config.hpp  camera_renderer.hpp  camera_renderer_config.hpp  camera_sample.hpp  offscreen_gl_context.hpp
mujoco_simulation/include/mujoco_simulation/component/imu/: imu_binding.hpp  imu_component.hpp  imu_config.hpp  imu_sample.hpp
mujoco_simulation/include/mujoco_simulation/component/joint/: joint_binding.hpp  joint_command.hpp  joint_component.hpp  joint_config.hpp  joint_state.hpp
mujoco_simulation/include/mujoco_simulation/component/lidar/: lidar_binding.hpp  (+3 more)
mujoco_simulation/include/mujoco_simulation/hardware/: camera.hpp  data.hpp  hardware_interface.hpp  hardware_manager.hpp  imu.hpp  joint.hpp  lidar.hpp  mj_context.hpp  mobile_base.hpp
mujoco_simulation/include/mujoco_simulation/runtime/: model_runtime.hpp  mujoco_raii.hpp  scheduler_config.hpp  simulation_clock.hpp  simulation_request.hpp  simulation_scheduler.hpp
mujoco_simulation/include/mujoco_simulation/scheduler/: sensor_scheduler.hpp
mujoco_simulation/include/mujoco_simulation/viewer/: viewer.hpp  viewer_config.hpp
mujoco_simulation/src/: mujoco_simulation.cpp  simulation.cpp
mujoco_simulation/src/component/: component_manager.cpp  component_registry.cpp
mujoco_simulation/src/component/camera/: camera_component.cpp  camera_renderer.cpp
mujoco_simulation/src/component/imu/: imu_component.cpp
mujoco_simulation/src/component/joint/: joint_component.cpp
mujoco_simulation/src/component/lidar/: lidar_component.cpp
mujoco_simulation/src/component/mobile_base/: mobile_base_component.cpp
mujoco_simulation/src/hardware/: camera.cpp  hardware_manager.cpp  imu.cpp  joint.cpp  lidar.cpp  mobile_base.cpp
mujoco_simulation/src/runtime/: model_runtime.cpp  simulation_scheduler.cpp
mujoco_simulation/src/scheduler/: sensor_scheduler.cpp
mujoco_simulation/src/viewer/: viewer.cpp
mujoco_simulation/src/viewer/lodepng/: lodepng.cpp  lodepng.h
mujoco_simulation/src/viewer/simulate/: array_safety.h  glfw_adapter.cc  glfw_adapter.h  glfw_corevideo.h  glfw_dispatch.cc  main.cc  platform_ui_adapter.cc  platform_ui_adapter.h  simulate.cc  simulate.h
mujoco_simulation/test/performance/: baseline_scenarios.json  perf_runtime_scenarios.cpp  run_baseline.py
mujoco_simulation/test/unit/: test_buffered_simulation.cpp  test_camera_buffer.cpp  test_camera_rendering.cpp  test_camera_runtime.cpp  test_camera_sample.cpp  test_command_buffer.cpp  test_component_config.cpp  test_component_registry.cpp  test_joint_component.cpp  test_mobile_base.cpp  test_model_runtime.cpp  test_sensor_sampling.cpp  test_sensor_scheduler.cpp  test_simulation_scheduler.cpp  test_state_buffer.cpp  test_status.cpp  test_viewer.cpp
mujoco_simulation_ros/: CMakeLists.txt  package.xml
mujoco_simulation_ros/include/mujoco_simulation_ros/: bridge_config.hpp  simulation_ros_bridge.hpp
mujoco_simulation_ros/src/: simulation_ros_bridge.cpp
mujoco_simulation_ros/tests/: test_simulation_ros_bridge.cpp
robot_mujoco/: CMakeLists.txt  README.md  __init__.py  launch_utils.py  package.xml  runtime.py
robot_mujoco/config/: fr3.urdf.template  robocasa_fr3_scene.yaml  robocasa_scene.example.yaml
robot_mujoco/config/franka_fr3/: controllers.yaml  franka_fr3.urdf.template  franka_fr3_mujoco.rviz  robocasa_scene.yaml
robot_mujoco/config/turtlebot3/: robocasa_scene.yaml  turtlebot3_mujoco.rviz  turtlebot3_waffle_pi.urdf.template
robot_mujoco/include/robot_mujoco/: robot_mujoco.hpp
robot_mujoco/launch/: franka_fr3_mujoco.launch.py  robot_mujoco.launch.py  sim.launch.py  turtlebot3_mujoco.launch.py
robot_mujoco/model/franka_fr3/: README.md  franka_fr3_scene.xml
robot_mujoco/model/turtlebot3/: turtlebot3_burger.xml
robot_mujoco/robocasa/: __init__.py  cli_options.py  exceptions.py  mjcf_adapter.py  scene_cli.py  scene_config.py  scene_data.py  scene_generator.py  scene_runner_cli.py
robot_mujoco_ros2/: CMakeLists.txt  package.xml  robot_mujoco_ros2_plugin.xml
robot_mujoco_ros2/include/robot_mujoco_ros2/: bridge_config.hpp  config_builder.hpp  data.hpp  message_mapper.hpp  mujoco_hardware_interface.hpp  publish_channel.hpp  qos_profiles.hpp  simulation_ros_bridge.hpp
robot_mujoco_ros2/src/: config.cpp  config_builder.cpp  message_mapper.cpp  mujoco_hardware_interface.cpp  plugin_entry.cpp  publish_channel.cpp  qos_profiles.cpp  simulation_ros_bridge.cpp
robot_mujoco_ros2/tests/: test_mujoco_hardware_interface.cpp  test_simulation_ros_bridge.cpp
robot_mujoco_ros2/tests/performance/: perf_read_write_loop.cpp
(+47 files in other folders)
