<?xml version="1.0"?>
<package format="3">
  <name>mujoco_simulation_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge package for mujoco_simulation clock, sensor publishers, and control services.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mujoco_ros2_bridge_msgs</depend>
  <depend>mujoco_simulation</depend>
  <depend>rclcpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
