<?xml version="1.0"?>
<package format="3">
  <name>robot_mujoco</name>
  <version>0.1.0</version>
  <description>
    Workspace-level C++ and Python entry point for the robot_mujoco project:
    convenience C++ headers, RoboCasa scene generation, configuration, and
    simulation orchestration.
  </description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>mujoco_simulation</depend>
  <depend>robot_mujoco_ros2</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
