<?xml version="1.0"?>
<package format="3">
  <name>franka_fr3_mujoco</name>
  <version>0.1.0</version>
  <description>Example FR3 MuJoCo simulation package exposed through the robot_mujoco workspace entry point.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_mujoco</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
